Bug 424172 - There are no more chars for next bookmark
Summary: There are no more chars for next bookmark
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.04.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 433622 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-07-13 22:38 UTC by Russell
Modified: 2021-02-26 04:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Russell 2020-07-13 22:38:06 UTC
SUMMARY
When the 27th bookmark is added, a red popup message is displayed in the lower right corner with the text, "There are no more chars for the next bookmark. The bookmarks are still added. They are also remembered when the document is closed and re-opened. In addition, the menu item Bookmarks only displays a max of 56 bookmarks in two columns.

STEPS TO REPRODUCE
1. Open document
2. Add 27 bookmarks. Should see pop message on the 27th one.
3. Now add 30 more bookmarks for a total of 57. Look at the menu item Bookmarks. The 57th bookmark is not listed.
4. Delete a bookmark and look at the menu item Bookmarks again. The 57th bookmark is now visible. The bookmarks are always recorded, just not visible on the Bookmarks menu item. Prev & Next Bookmarks do work.

OBSERVED RESULT
Popup message is displayed when more than 26 bookmarks are added. The message goes away when a line in the document is clicked, but reappears when another bookmark is added.

The Bookmarks menu item only displays 56 bookmarks in 2 columns. The first column contains 26 bookmarks, the second 30 bookmarks.

EXPECTED RESULT
No popup message. Unlimited bookmarks.

All bookmarks are visible on the Bookmarks menu item.

SOFTWARE/OS VERSIONS
KDE Plasma Version:  5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
I don't know if the number of bookmarks on the Bookmarks menu item changes with a user's Style. There is a lot space between bookmarks.

This behavior is different than Kate Version 3.14.2; Using KDE Development Platform 4.14.2. There is no message and the Bookmarks menu item displays as many columns as necessary to display all bookmarks. Bookmarks are unlimited.

The document is an asciidoc document and the bookmarks are placed on the titles ==, ===, ====, =====, thus the large number.
Comment 1 Russell 2020-07-14 00:51:18 UTC
Something lead me done the path that the message would only appear if in Vi Input mode. I'm not in Vi mode, so I don't think the message should be shown.
Comment 2 Justin Zobel 2020-11-13 05:43:47 UTC
Confirmed in regular (non-vi) mode on kate from git master. After about 27 it keeps coming up with the message.
Comment 3 Bug Janitor Service 2021-01-27 02:08:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/93
Comment 4 Jan Paul Batrina 2021-01-27 09:14:24 UTC
Git commit 9ac8d5704cf793cdf9c01f5c8202629319ff1253 by Jan Paul Batrina.
Committed on 27/01/2021 at 02:05.
Pushed by jbatrina into branch 'master'.

Only show bookmark chars error when in vimode

M  +2    -1    src/vimode/marks.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/9ac8d5704cf793cdf9c01f5c8202629319ff1253
Comment 5 Jan Paul Batrina 2021-02-26 04:57:19 UTC
*** Bug 433622 has been marked as a duplicate of this bug. ***