Only show bookmark chars error when in vimode

BUG: 424172